assets/main.scss
$border-color: #dbdfe1;

html {
  font-family: "Source Sans Pro", -apple-system, BlinkMacSystemFont, "Segoe UI",
    Roboto, "Helvetica Neue", Arial, sans-serif;
  font-size: 137.5%;
  word-spacing: 1px;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  box-sizing: border-box;
  color: #35495e;
}

body {
  max-width: 1280px;
  margin: 0 auto;
}

*,
*:before,
*:after {
  box-sizing: border-box;
}

main {
  padding: 0 1rem;
}

a {
  text-decoration: none;
  color: #215182;
}

header,
footer {
  font-size: 16px;
  a {
    color: inherit;
  }
}

header {
  border-bottom: 1px solid $border-color;
  padding: 0 1rem;
}

footer {
  margin-top: 1rem;
  border-top: 1px solid $border-color;
  padding: 1rem;
  div {
    padding: 0.25rem;
  }
}

.center {
  text-align: center;
}

/* Copy & Lists */
p {
  line-height: 1.5rem;
  margin-top: 1.5rem;
  margin-bottom: 0;
}

h1.title {
  margin-bottom: 1rem;
}

.time {
  font-size: 0.9rem;
  color: #777;
}

.posts {
  a {
    color: inherit;
  }
  li {
    padding: 0.25rem 0;
  }
}

.hl {
  padding: 0 0.3rem;
  border-radius: 5%;
}

.hl {
  background: #eee;
  overflow: auto;
}

.content {
  margin-top: 1rem;
  line-height: 1.4rem;
}

code.prefix[class*="language-"]{
  color: #35495e;
}

.prefix:before {
  content: "$ ";
  opacity: 0.5;
}

.su:before {
  content: "# ";
  opacity: 0.5;
}

.t1 {
  padding-top: 1rem;
}

.l1 {
  padding-left: 1rem;
}

.small {
  font-size: 65%;
}

.right {
  float: right;
}

.btn {
  background: #ccc;
  padding: 0.5rem;
  cursor: pointer;
  border-radius: 5%;
  font-weight: 300;
}

.btn:hover {
  background: #bbb;
}

.btn:hover {
  -webkit-box-shadow: 0px 0px 0 #666;
  -moz-box-shadow: 0px 0px 0 #666;
  top: 5px;
  left: 5px;
}

.block {
  background: #f9f9f9;
  border-left: 10px solid #ccc;
  margin: 1.5em 10px;
  padding: 0.5em 10px;

  ul {
    margin-top: 0.3rem;
    list-style: square outside none;
    li {
      padding: 0.2rem 0;
    }
  }
}

input {
  outline: none;
  padding: 3px 0px 3px 3px;
  border: 1px solid #dddddd;
  color: inherit;
}

input:focus {
  box-shadow: 0 0 5px rgb(0, 0, 0);
  padding: 3px 0px 3px 3px;
  border: 1px solid rgb(0, 0, 0);
}

pre.ascii {
  line-height: 1rem;
}

article {
  margin-bottom: 2em;
}

:not(pre) > code{
  padding: .3em;
  white-space: normal;
  background: #f5f2f0;
  hyphens: none;
  white-space: pre;
  word-spacing: normal;
  word-break: normal;
  word-wrap: normal;
}

pre > code{
  font-family: monospace !important;
}

